# CVAim

./: CMakeLists.txt  settings.txt
src/: functions.cpp  functions.h  getJson.cpp  getJson.h  gptcode.cpp  main.cpp  parser.cpp  parser.h
